<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECEFF8"
    tools:context=".CardActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_whats"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toEndOf="@+id/card_call"
        app:layout_constraintTop_toBottomOf="@+id/dentalView" >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_whatsApp"
                android:layout_width="68dp"
                android:layout_height="19dp"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="21dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/text_whatsApp"
                android:textColor="#003C68"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/image_whatsapp"
                android:layout_width="28dp"
                android:layout_height="28dp"
                app:layout_constraintBottom_toTopOf="@+id/text_whatsApp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_whatsapp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_website"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="244dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_call">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_website"
                android:layout_width="84dp"
                android:layout_height="19dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginBottom="21dp"
                android:text="@string/text_website"
                android:textColor="#003C68"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/image_website"
                android:layout_width="28dp"
                android:layout_height="28dp"
                app:layout_constraintBottom_toTopOf="@+id/text_website"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_website" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/top_bar_doctor"
        android:layout_width="match_parent"
        android:layout_height="174dp"
        android:background="#322E78"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/card_doctor"
        android:layout_width="263dp"
        android:layout_height="106dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="19dp"
        app:layout_constraintBottom_toBottomOf="@+id/top_bar_doctor"
        app:layout_constraintEnd_toEndOf="@+id/top_bar_doctor"
        app:layout_constraintStart_toStartOf="@+id/top_bar_doctor"
        app:layout_constraintTop_toTopOf="@+id/top_bar_doctor" />

    <TextView
        android:id="@+id/text_name_doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/text_name_doctor"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/text_position"
        app:layout_constraintEnd_toEndOf="@+id/card_doctor"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toEndOf="@+id/image_doctor"
        app:layout_constraintTop_toTopOf="@+id/card_doctor"
        app:layout_constraintVertical_bias="0.642" />

    <TextView
        android:id="@+id/text_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/text_position"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/card_doctor"
        app:layout_constraintEnd_toEndOf="@+id/card_doctor"
        app:layout_constraintStart_toEndOf="@+id/image_doctor" />

    <ImageView
        android:id="@+id/image_doctor"
        android:layout_width="98dp"
        android:layout_height="106dp"
        app:layout_constraintBottom_toBottomOf="@+id/card_doctor"
        app:layout_constraintStart_toStartOf="@+id/card_doctor"
        app:layout_constraintTop_toTopOf="@+id/card_doctor"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/photo_doctor" />

    <View
        android:id="@+id/dentalView"
        android:layout_width="215dp"
        android:layout_height="74dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="129dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar_doctor" />

    <ImageView
        android:id="@+id/image_dental"
        android:layout_width="62dp"
        android:layout_height="63dp"
        android:layout_marginBottom="11dp"
        app:layout_constraintBottom_toBottomOf="@+id/dentalView"
        app:layout_constraintStart_toStartOf="@+id/dentalView"
        app:layout_constraintTop_toTopOf="@+id/dentalView"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_dental" />

    <TextView
        android:id="@+id/text_dental_clinic"
        android:layout_width="150dp"
        android:layout_height="32dp"
        android:layout_marginTop="31dp"
        android:fontFamily="@font/alex_brush"
        android:text="@string/text_dental_clinic"
        android:textColor="#322E78"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/image_dental"
        app:layout_constraintTop_toTopOf="@+id/dentalView" />

    <TextView
        android:id="@+id/text_friendly_dental"
        android:layout_width="151dp"
        android:layout_height="16dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/text_friendly_dental"
        android:textColor="#322E78"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/dentalView"
        app:layout_constraintEnd_toEndOf="@+id/dentalView"
        app:layout_constraintTop_toBottomOf="@+id/text_dental_clinic"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/locationView"
        android:layout_width="197dp"
        android:layout_height="102dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="147dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_website"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_our_location"
        android:layout_width="121dp"
        android:layout_height="25dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/text_our_location"
        android:textColor="#003C68"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/locationView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/locationView"
        app:layout_constraintTop_toTopOf="@+id/locationView" />

    <TextView
        android:id="@+id/text_shopping_center"
        android:layout_width="197dp"
        android:layout_height="44dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/text_shopping_center"
        android:textColor="#003C68"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/text_open_map"
        app:layout_constraintEnd_toEndOf="@+id/locationView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/locationView"
        app:layout_constraintTop_toBottomOf="@+id/text_our_location" />

    <TextView
        android:id="@+id/text_open_map"
        android:layout_width="74dp"
        android:layout_height="19dp"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/text_open_map"
        android:textColor="#924883"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/locationView"
        app:layout_constraintEnd_toEndOf="@+id/locationView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/locationView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_call"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="244dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dentalView" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_to_call"
                android:layout_width="42dp"
                android:layout_height="19dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginBottom="21dp"
                android:text="@string/text_to_call"
                android:textColor="#003C68"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/image_call"
                android:layout_width="28dp"
                android:layout_height="28dp"
                app:layout_constraintBottom_toTopOf="@+id/text_to_call"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_call" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_telegram"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toEndOf="@+id/card_website"
        app:layout_constraintTop_toBottomOf="@+id/card_whats">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_telegram"
                android:layout_width="62dp"
                android:layout_height="19dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginBottom="21dp"
                android:text="@string/text_telegram"
                android:textColor="#003C68"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/image_telegram"
                android:layout_width="28dp"
                android:layout_height="28dp"
                app:layout_constraintBottom_toTopOf="@+id/text_telegram"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_telegram" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_email"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/card_whats"
        app:layout_constraintTop_toBottomOf="@+id/dentalView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_email"
                android:layout_width="55dp"
                android:layout_height="19dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginBottom="21dp"
                android:text="@string/text_email"
                android:textColor="#003C68"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/image_email"
                android:layout_width="28dp"
                android:layout_height="28dp"
                app:layout_constraintBottom_toTopOf="@+id/text_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_email" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_contact"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toEndOf="@+id/card_telegram"
        app:layout_constraintTop_toBottomOf="@+id/card_email">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_contact"
                android:layout_width="84dp"
                android:layout_height="19dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginBottom="21dp"
                android:text="@string/text_contact"
                android:textColor="#003C68"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/image_contact"
                android:layout_width="28dp"
                android:layout_height="28dp"
                app:layout_constraintBottom_toTopOf="@+id/text_contact"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_contact" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>